--- a/UrlShortener/UrlShortener/appsettings.json
+++ b/UrlShortener/UrlShortener/appsettings.json
@@ -1,6 +1,11 @@
 {
+
+  "UrlShortener": {
+    "ExpirationDays": 30
+  },
   "Mongo": {
-    "ConnectionsString" : ""
+    "ConnectionsString": "mongodb://SEUIP/:27017",
+    "Database": "UrlShortener"
   },
   "Logging": {
     "LogLevel": {
